2009-11-17 [holger]	0.2cvs4

	* configure.ac
	* src/python_plugin.c
		Bump required Claws Mail version to 3.7.3.14

2009-11-17 [holger]	0.2cvs3

	* src/python_plugin.c
		Register scripts as possible choices for
		toolbar items

2009-11-12 [pawel]	0.2cvs2

	* configure.ac
		fix bashism

2009-11-11 [pawel]	0.2cvs1

	* src/python_plugin.c
	* src/composewindowtype.c
		sync with core

2009-10-09 [paul]	0.2

	0.2 released. (initial release)

2009-09-04 [holger]	0.1cvs15

	* src/messageinfotype.c
		Add access to message flags

2009-09-03 [holger]	0.1cvs14

	* src/Makefile.am
	* src/clawsmailmodule.c
	* src/messageinfotype.c
	* src/messageinfotype.h
		Add message info class, and 
		provide access to selected messages as a list
		of message info objects

2009-09-03 [holger]	0.1cvs13

	* .cvsignore
		More files to ignore
	* README
		Improvements
	* src/nodetype.c
		Add member function to convert a tree into a flat list

2009-08-20 [holger]	0.1cvs12

	* ChangeLog
		Fix typo
	* src/composewindowtype.c
		More robust statement order

2009-08-20 [holger]	0.1cvs11

	* configure.ac
	* src/python_plugin.c
		Bump required Claws Mail version to 3.7.2.19
	* src/composewindowtype.c
		Add interface for attaching files to a compose window

2009-08-20 [holger]	0.1cvs10

	* ChangeLog
	* README
		Fix README and ChangeLog

2009-08-19 [holger]	0.1cvs9

	* README
		Add some examples

2009-08-19 [holger]	0.1cvs8

	* src/clawsmailmodule.c
	* src/nodetype.c
		Add basic interface to quicksearch

2009-08-19 [holger]	0.1cvs7

	* .cvsignore
		more files to ignore
	* README
	* src/Makefile.am
	* src/clawsmailmodule.c
	* src/foldertype.c
	* src/foldertype.h
	* src/nodetype.c
	* src/nodetype.h
		Implement a tree widget, and
		provide access to the folderview

2009-08-19 [paul]	0.1cvs6

	* Makefile.am
	* configure.ac
	* src/Makefile.am
		reduce the minimum required python to 2.5
		and other autofoo fixes

2009-08-10 [holger]	0.1cvs5

	* README
		Be a little more elaborate
	* configure.ac